# sensor_moveit_perception

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: gazebo_empty.launch.py  rgbd_camera_spawn.launch.py  test_camera_spawn.launch.py
moveit2/: sensors_pointcloud.yaml
urdf/: camera_common.xacro  rgbd_camera.gazebo.xacro  rgbd_camera_macro.xacro  rgbd_camera_world.urdf.xacro
worlds/: test_empty.world
