<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_moveit_perception</name>
  <version>0.0.1</version>
  <description>Integrate sensor with MoveIt perception</description>
  <maintainer email="korawit.gems@gmail.com">korawit Kitikangsadan</maintainer>
  <author>korawit Kitikangsadan</author>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_common</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_occupancy_map_monitor</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
